@@ -20,6 +20,8 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include "View.hpp"
 #include "OptionsTemplateView.hpp"
+#include "CheckBox.hpp"
+#include "StateChangedCallback.hpp"
 
 /////////////////////////////////////////////////////////////////////////////
 // forward declarations
@@ -32,16 +34,19 @@ class Surface;
 /////////////////////////////////////////////////////////////////////////////
 
 //--------------------------------------------------------------------------
-class SoundView : public OptionsTemplateView
+class SoundView : public OptionsTemplateView, public StateChangedCallback
 {
 protected:
     virtual void loadTitleSurface();
+    CheckBox checkBoxSoundEnabled;
+    CheckBox checkBoxMusicEnabled;
 
 public:
     SoundView();
 
     virtual void doDraw(Surface &windowArea, Surface &clientArea);
     virtual void initButtons();
+    virtual void stateChanged(Component* source);
 }; // end SoundView
 
 #endif // end __SoundView_hpp__
